# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_tooling",
    version = "0.0.0",
    compatibility_level = 1,
)

###############################################################################
# Core Dependencies
###############################################################################
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "aspect_rules_py", version = "1.4.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "rules_java", version = "8.15.1")
bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "rules_multitool", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "score_rust_policies", version = "0.0.2")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "flatbuffers", version = "25.9.23")

###############################################################################
# Rust Toolchain
###############################################################################
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

###############################################################################
# Rust Crates (crate_universe)
###############################################################################
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "pest",
    version = "2.8.3",
)
crate.spec(
    package = "pest_derive",
    version = "2.8.3",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.0",
)
crate.spec(
    package = "thiserror",
    version = "1.0.44",
)
crate.spec(
    package = "log",
    version = "0.4",
)
crate.spec(
    package = "env_logger",
    version = "0.10",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0",
)
crate.spec(
    package = "serde_json",
    version = "1.0",
)
crate.spec(
    package = "serde_yaml",
    version = "0.9",
)
crate.spec(
    package = "once_cell",
    version = "1.19",
)
crate.spec(
    package = "flatbuffers",
    version = "25.9.23",
)
crate.from_specs()
use_repo(crate, "crates")

###############################################################################
# Python Toolchain
###############################################################################
PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

###############################################################################
# Pip Hub
###############################################################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Main tooling pip
pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "pip_tooling",
    python_version = PYTHON_VERSION,
    requirements_lock = "//python_basics:requirements.txt",
)
use_repo(pip, "pip_tooling")

register_toolchains(
    "//bazel/rules/rules_score:sphinx_default_toolchain",
)

###############################################################################
# Dev Dependencies (for testing)
###############################################################################
bazel_dep(name = "score_docs_as_code", version = "3.0.1", dev_dependency = True)
